# ConsoleCourse

./: CMakeLists.txt  ConsoleCourse.qmlproject  README.md  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/ConsoleCourse/: CMakeLists.txt  Constants.qml  qmldir
imports/ConsoleCourse/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
utest/: CMakeLists.txt  example_test.cpp
